--- a/calculadora.html
+++ b/calculadora.html
@@ -101,7 +101,7 @@
         <div id="consumption"></div>
         <div id="cost"></div>
     </div>
-    <script src="rec.js"></script>
+    <script src="js/rec.js"></script>
 </body>
 
 
