--- a/calculadora.html
+++ b/calculadora.html
@@ -102,6 +102,11 @@
         <div id="cost"></div>
     </div>
     <script src="js/rec.js"></script>
+
+<main>
+     <a href="https://tarifaluzhora.es/">Consulta el precio de la luz hoy: Detalles y Evolución de la tarifa PVPC </a>
+</main>
+    
 </body>
 
 
