--- a/consejos.html
+++ b/consejos.html
@@ -28,7 +28,7 @@
                             <a href="calculadora.html" class="menu__link menu__link--inside">Calculadora</a>
                         </li>
                         <li class="menu__inside">
-                            <a href="estadisticas.html" class="menu__link menu__link--inside">Estadisticas del precio a lo largo del tiempo</a>
+                            <a href="estadisticas.html" class="menu__link menu__link--inside">Variaciones del Precio a lo Largo del Tiempo</a>
                         </li>
                         <li class="menu__inside">
                             <a href="#" class="menu__link menu__link--inside">Como ahorrar</a>
