--- a/estadisticas.html
+++ b/estadisticas.html
@@ -28,7 +28,7 @@
                             <a href="calculadora.html" class="menu__link menu__link--inside">Calculadora</a>
                         </li>
                         <li class="menu__inside">
-                            <a href="#" class="menu__link menu__link--inside">Estadisticas del precio a lo largo del tiempo</a>
+                            <a href="#" class="menu__link menu__link--inside">Variaciones del Precio a lo Largo del Tiempo</a>
                         </li>
                         <li class="menu__inside">
                             <a href="consejos.html" class="menu__link menu__link--inside">Como ahorrar</a>
@@ -77,6 +77,12 @@
 
 
 </body>
+
+
+
+
+
+
 
 
 
